--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ionic/vue-router": "^8.0.0",
     "axios": "^1.7.9",
     "ionicons": "^7.0.0",
+    "swiper": "^11.2.1",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0",
     "vue-the-mask": "^0.11.1",
