--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@capacitor/android": "^6.2.1",
     "@capacitor/app": "6.0.1",
-    "@capacitor/core": "6.1.2",
+    "@capacitor/core": "^6.2.1",
     "@capacitor/haptics": "6.0.1",
+    "@capacitor/ios": "^6.2.1",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/vue": "^8.0.0",
@@ -29,7 +31,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@capacitor/cli": "6.1.2",
+    "@capacitor/cli": "^6.2.1",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
