--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@capacitor-community/http": "^1.4.1",
     "@capacitor/android": "^6.2.1",
     "@capacitor/app": "6.0.1",
     "@capacitor/core": "^6.2.1",
